--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 <strong>Helen's Bay G.C. Pool Comp</strong>
 <br><br>
 <!--<a href="/RBC Canadian Open 2019">RBC Canadian Open 2019 (FOR TESTING)</a><br>-->
-<a href="/US Open 2019">US Open 2019</a><br>
+<a href="/The Open Championship 2019">The Open Championship 2019</a><br>
 </body>
 </html>
