--- a/US Open 2019/index.html
+++ b/US Open 2019/index.html
@@ -1,5 +1,9 @@
 <html>
 <header><title>US Open 2019</title></header>
+<head>
+<script>var clicky_site_ids = clicky_site_ids || []; clicky_site_ids.push(101197273);</script>
+<script async src="//static.getclicky.com/js"></script>
+ </head> 
 <body>
 <!--<iframe width="4000" height="1500" frameborder="0" scrolling="no" src="https://onedrive.live.com/embed?resid=44A428F9C5DAF195%21114&authkey=%21AKiY-OMKyOse0qU&em=2&Item=OneDriveShare&wdHideGridlines=True&wdInConfigurator=True"></iframe>-->
 <iframe width="4000" height="1500" frameborder="0" scrolling="no" src="https://onedrive.live.com/embed?resid=44A428F9C5DAF195%21122&authkey=%21AOviYWkT8fUUYDY&em=2&Item=OneDriveShare&wdHideGridlines=True&wdInConfigurator=True"></iframe>
