--- a/index.html
+++ b/index.html
@@ -5,5 +5,7 @@
 <br><br>
 <!--<a href="/RBC Canadian Open 2019">RBC Canadian Open 2019 (FOR TESTING)</a><br>-->
 <a href="/The Open Championship 2019">The Open Championship 2019</a><br>
+<script>var clicky_site_ids = clicky_site_ids || []; clicky_site_ids.push(101197273);</script>
+<script async src="//static.getclicky.com/js"></script>
 </body>
 </html>
