--- a/The Open Championship 2019/index.html
+++ b/The Open Championship 2019/index.html
@@ -5,3 +5,4 @@
 <script>var clicky_site_ids = clicky_site_ids || []; clicky_site_ids.push(101197273);</script>
 <script async src="//static.getclicky.com/js"></script>
 </body>
+</html>
